--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -26,20 +26,17 @@
 
     <EditText
         android:id="@+id/setupNameField"
-        android:layout_width="368dp"
+        android:layout_width="319dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="176dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="Enter your display name"
         android:inputType="textPersonName"
-        android:text="Enter your display name"
-        app:layout_constraintBottom_toTopOf="@+id/setupSubmitBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setupImageBtn" />
 
@@ -52,9 +49,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Finish setup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setupNameField" />
 
 </android.support.constraint.ConstraintLayout>
