--- a/app/src/main/res/layout/blog_row.xml
+++ b/app/src/main/res/layout/blog_row.xml
@@ -6,13 +6,13 @@
     android:layout_margin="28dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/post_image"
-            android:layout_width="390dp"
+            android:layout_width="match_parent"
             android:layout_height="185dp"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
@@ -33,11 +33,40 @@
             android:id="@+id/post_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
+            android:paddingBottom="15dp"
             android:text="Post  Description Goes Here"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/post_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="15dp"
+            android:text="username"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/like_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:scaleType="fitStart"
+                app:srcCompat="@mipmap/baseline_thumb_up_alt_gray_36" />
+        </LinearLayout>
 
     </LinearLayout>
 
